[package]
name = "player"
version = "1.0.0"
edition = "2021"
authors = ["Welton Felix <hi@weltonfelix.dev>"]
description = "Play songs and videos directly from your terminal."
homepage = "https://github.com/weltonfelix/player"
readme = "https://github.com/weltonfelix/player#player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
termios = "0.3.3"
vlc-rs = "0.3"
